--- a/actividades0.html
+++ b/actividades0.html
@@ -27,36 +27,36 @@
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">🏘️ Inicio</a></li>
-   <li><a href="_bienvenida.html" class="no-ch">🚀 Bienvenida</a></li>
-   <li><a href="_introduccin.html" class="no-ch">📑 Introducción</a></li>
-   <li><a href="_dcimas_centsimas_y_milsimas.html" class="daddy">📁 Décimas, centésimas y milésimas.</a>
+   <li><a href="bienvenida.html" class="no-ch">🚀 Bienvenida</a></li>
+   <li><a href="introduccin.html" class="no-ch">📑 Introducción</a></li>
+   <li><a href="dcimas_centsimas_y_milsimas.html" class="daddy">📁 Décimas, centésimas y milésimas.</a>
    <ul class="other-section">
-      <li><a href="_tablero_posicional.html" class="no-ch">📘 Tablero Posicional</a></li>
-      <li><a href="_actividades.html" class="no-ch">🧩 Actividades</a></li>
-      <li><a href="_evaluacin.html" class="no-ch">⚙️ Evaluación</a></li>
+      <li><a href="tablero_posicional.html" class="no-ch">📘 Tablero Posicional</a></li>
+      <li><a href="actividades.html" class="no-ch">🧩 Actividades</a></li>
+      <li><a href="evaluacin.html" class="no-ch">⚙️ Evaluación</a></li>
    </ul>
    </li>
    <li class="current-page-parent"><a href="_problemas_de_fracciones_con_suma_y_resta.html" class="current-page-parent daddy">📁 Problemas de fracciones con suma y resta.</a>
    <ul>
-      <li><a href="_operaciones_con_fracciones.html" class="no-ch">📕 Operaciones con Fracciones</a></li>
+      <li><a href="operaciones_con_fracciones.html" class="no-ch">📕 Operaciones con Fracciones</a></li>
       <li id="active"><a href="_actividades0.html" class="active no-ch">🧩 Actividades</a></li>
-      <li><a href="_evaluacin0.html" class="no-ch">⚙️ Evaluación</a></li>
+      <li><a href="evaluacin0.html" class="no-ch">⚙️ Evaluación</a></li>
    </ul>
    </li>
-   <li><a href="_adiciones_y_sustracciones_con_fracciones_heterogneas_y_homogneas.html" class="daddy">📁 Adiciones y sustracciones con fracciones heterogéneas y homogéneas.</a>
+   <li><a href="adiciones_y_sustracciones_con_fracciones_heterogneas_y_homogneas.html" class="daddy">📁 Adiciones y sustracciones con fracciones heterogéneas y homogéneas.</a>
    <ul class="other-section">
-      <li><a href="_operaciones_combinadas_con_nmeros_fraccionarios.html" class="no-ch">📕 Operaciones combinadas con números fraccionarios</a></li>
-      <li><a href="_actividades1.html" class="no-ch">🧩 Actividades</a></li>
-      <li><a href="_evaluacin1.html" class="no-ch">⚙️ Evaluación</a></li>
+      <li><a href="operaciones_combinadas_con_nmeros_fraccionarios.html" class="no-ch">📕 Operaciones combinadas con números fraccionarios</a></li>
+      <li><a href="actividades1.html" class="no-ch">🧩 Actividades</a></li>
+      <li><a href="evaluacin1.html" class="no-ch">⚙️ Evaluación</a></li>
    </ul>
    </li>
-   <li><a href="_bibliografa.html" class="no-ch">✏️ Bibliografía</a></li>
-   <li><a href="_fichero_fuente.html" class="no-ch">💻 Fichero Fuente</a></li>
+   <li><a href="bibliografa.html" class="no-ch">✏️ Bibliografía</a></li>
+   <li><a href="fichero_fuente.html" class="no-ch">💻 Fichero Fuente</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="_operaciones_con_fracciones.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="_evaluacin0.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="operaciones_con_fracciones.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="_evaluacin0.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -230,7 +230,7 @@ MDBiJXUwMDFkJXUwMDE3JXUwMDE2
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="_operaciones_con_fracciones.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="_evaluacin0.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="operaciones_con_fracciones.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="_evaluacin0.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
